# meshoui

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt
cmake/: Add_MathUtils.cmake  Add_OpenMesh.cmake  Add_VTK.cmake  Add_cxxopt.cmake  Add_googletest.cmake  Add_mathutils.cmake  Add_mmg.cmake  URL.conf.cmake
src/meshoui/: CMakeLists.txt  IntegrandOnFace.h  Integration.h  boundary_polygon.cpp  boundary_polygon.h  clipper.cpp  clipper.h  clipper.hxx  clipping_surfaces.cpp  clipping_surfaces.h  integrand_on_face.h  integration.h  loader.cpp  loader.h  math.h  maths.h  mesh.cpp  mesh.h  meshTraits.h  mesh_traits.h  meshoui.h  mmgs_wrapper.cpp  mmgs_wrapper.h  plane.cpp  plane.h  polygon.cpp  polygon.h  remesher.cpp  remesher.h  version.cpp.in  version.h  vtkmesh.cpp  vtkmesh.h
tests/: CMakeLists.txt  test_analytical_surface_integration.cpp  test_clipper.cpp  test_integration.cpp  test_load_mesh.cpp  test_merger.cpp  test_mmg.cpp  test_numerical_integration.cpp  test_plane.cpp  test_polygon.cpp  test_symmetry_horizontal_plane.cpp
tools/: CMakeLists.txt  make_VTK_8_2.sh  meshouix.cpp
